--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_SANITY_PROJECT_ID='7h0tal4p'
 NEXT_PUBLIC_SANITY_DATASET='production'
-NEXT_PUBLIC_SANITY_API_VERSION='1'
+NEXT_PUBLIC_SANITY_API_VERSION='2022-03-07'
 
 NEXT_PUBLIC_NODEMAILER_PW = "wrweejkheasvydci"
 NEXT_PUBLIC_NODEMAILER_EMAIL= "msezi.usv@gmail.com"
